[#24] added: 64bit event numbers support